@@ -599,7 +599,7 @@ declaration
              for (l1 = lnk; l1 != NULL; l1 = l1->next)
                if (IS_STRUCT (l1) && SPEC_STRUCT (l1)->b_flexArrayMember)
                  break;
-             if (l0 == NULL && l1 != NULL && SPEC_EXTR($1) != 1)
+             if (!options.std_c99 && l0 == NULL && l1 != NULL && SPEC_EXTR($1) != 1)
                werror (W_FLEXARRAY_INSTRUCT, sym->name);
              /* do the pointer stuff */
              pointerTypes(sym->type,lnk);
